--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <title>Santi Acosta</title>
   <script src="https://kit.fontawesome.com/b111190d83.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Montserrat', sans-serif;
       scroll-behavior: smooth;
     }
     .animate-on-scroll {
