Update logo and other things

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <header class="fixed w-full z-50 bg-black/50 backdrop-blur-md">
     <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
       <div class="flex items-center">
-        <img src="santi-acosta-logo-horizontal.svg" alt="Logo Santi Acosta" class="h-10 w-auto">
+        <img src="santi-acosta-logo.svg" alt="Logo Santi Acosta" class="h-10 w-auto">
       </div>
       <button id="menu-btn" class="text-white text-2xl md:hidden">
         <i class="fas fa-bars"></i>
@@ -67,11 +67,11 @@
     <!-- Intro con imagen de fondo -->
     <section id="intro" class="relative h-screen flex items-center justify-center text-center text-white animate-on-scroll bg-cover bg-center" style="background-image: url('santi-fondo.jpg');">
       <!-- Overlay oscuro -->
-      <div class="absolute inset-0 bg-black/90 z-0"></div>
+      <div class="absolute inset-0 bg-black/70 z-0"></div>
 
       <!-- Contenido -->
       <div class="relative z-10">
-       <img src="santi-acosta-logo.svg" alt="Logo Santi Acosta" class="mx-auto mb-6 shadow-xl w-64">
+       <img src="santi-acosta-logo.svg" alt="Logo Santi Acosta" class="mx-auto mb-6 shadow-xl h-64">
         <p class="text-lg text-gray-300">Compositor | Violinista | Canto | Eventos</p>
       </div>
     </section>
@@ -90,7 +90,7 @@
             <li>Soy multi-instrumentista con especial habilidad en violín, piano, guitarra y canto.</li>
             <li>Versatilidad en géneros musicales como ranchera, rock, pop, guasca, clásica, entre otros.</li>
           </ul>
-        <p class="mt-4">Me apasiona crear experiencias que permitan conectar mi arte con la audencia.</p>
+        <p class="mt-4">Me apasiona crear experiencias que permitan conectar mi arte con la audiencia.</p>
         </div>
       </div>
     </section>
@@ -110,7 +110,7 @@
           <p class="text-gray-400">Composición, producción y/o apoyo en elaboración de piezas musicales</p>
         </div>
         <div class="bg-black/60 rounded-2xl p-6 shadow-lg hover:scale-105 transition-transform">
-          <i class="fas fa-headphones text-4xl text-[#0760c3] mb-4"></i>
+          <i class="fas fa-champagne-glass text-4xl text-[#0760c3] mb-4"></i>
           <h3 class="text-xl font-semibold mb-2">Amenización en restaurantes y bares</h3>
           <p class="text-gray-400">Acompañamiento musical en lugares de entretenimiento y gastronómicos</p>
         </div>
@@ -147,7 +147,9 @@
         <h2 class="text-3xl font-bold text-[#0760c3] mb-12 text-center">Contacto</h2>
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
           <div class="text-gray-300 text-lg">
-            <p>¿Quieres saber más de mí o realizar un evento? <br>Conéctate en redes sociales o escríbeme directamente por WhatsApp.</p>
+            <p class="mb-4">¿Quieres saber más de mí, producir música o realizar un evento?</p>
+            <p class="mb-4">Conéctate en redes sociales o escríbeme directamente por WhatsApp.</p>
+            <p class="text-white-500 hover:scale-110 transition-transform"><i class="fab fa-credit-card mr-2"></i>Se aceptan pagos en efectivo, transferencia o tarjeta de crédito.</p>
           </div>
           <div class="flex flex-col items-center md:items-start gap-4 text-2xl">
             <a href="https://instagram.com/santiacostamusik" target="_blank" class="text-pink-500 hover:scale-110 transition-transform">
