--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <p class="text-gray-400">Composición, producción y/o apoyo en elaboración de piezas musicales</p>
         </div>
         <div class="bg-black/60 rounded-2xl p-6 shadow-lg hover:scale-105 transition-transform">
-          <i class="fas fa-champagne-glass text-4xl text-[#0760c3] mb-4"></i>
+          <i class="fa-solid fa-champagne-glass text-4xl text-[#0760c3] mb-4"></i>
           <h3 class="text-xl font-semibold mb-2">Amenización en restaurantes y bares</h3>
           <p class="text-gray-400">Acompañamiento musical en lugares de entretenimiento y gastronómicos</p>
         </div>
@@ -149,7 +149,7 @@
           <div class="text-gray-300 text-lg">
             <p class="mb-4">¿Quieres saber más de mí, producir música o realizar un evento?</p>
             <p class="mb-4">Conéctate en redes sociales o escríbeme directamente por WhatsApp.</p>
-            <p class="text-white-500 hover:scale-110 transition-transform"><i class="fab fa-credit-card mr-2"></i>Se aceptan pagos en efectivo, transferencia o tarjeta de crédito.</p>
+            <p class="text-white-500"><i class="fa-solid fa-credit-card mr-2"></i>Se aceptan pagos en efectivo, transferencia o tarjeta de crédito.</p>
           </div>
           <div class="flex flex-col items-center md:items-start gap-4 text-2xl">
             <a href="https://instagram.com/santiacostamusik" target="_blank" class="text-pink-500 hover:scale-110 transition-transform">
