--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <p class="text-gray-400">Composición, producción y/o apoyo en elaboración de piezas musicales</p>
         </div>
         <div class="bg-black/60 rounded-2xl p-6 shadow-lg hover:scale-105 transition-transform">
-          <i class="fa-solid fa-champagne-glass text-4xl text-[#0760c3] mb-4"></i>
+          <i class="fa-solid fa-champagne-glasses text-4xl text-[#0760c3] mb-4"></i>
           <h3 class="text-xl font-semibold mb-2">Amenización en restaurantes y bares</h3>
           <p class="text-gray-400">Acompañamiento musical en lugares de entretenimiento y gastronómicos</p>
         </div>
