--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
             <a href="https://instagram.com/santiacostamusik" target="_blank" class="text-pink-500 hover:scale-110 transition-transform">
               <i class="fab fa-instagram mr-2"></i>@santiacostamusik
             </a>
+            <a href="https://youtube.com/@santiacostamusik" target="_blank" class="text-red-500 hover:scale-110 transition-transform">
+              <i class="fab fa-youtube mr-2"></i>@santiacostamusik
+            </a>
             <a href="https://wa.me/573012926689" target="_blank" class="text-green-500 hover:scale-110 transition-transform">
               <i class="fab fa-whatsapp mr-2"></i>+57 3012926689
             </a>
