Fix social networks

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
             <p class="text-white-500"><i class="fa-solid fa-credit-card mr-2"></i>Se aceptan pagos en efectivo, transferencia o tarjeta de crédito.</p>
           </div>
           <div class="flex flex-col items-center md:items-start gap-4 text-2xl">
-            <a href="https://instagram.com/santiacostamusik" target="_blank" class="text-pink-500 hover:scale-110 transition-transform">
-              <i class="fab fa-instagram mr-2"></i>@santiacostamusik
+            <a href="https://instagram.com/santiacostaoficial" target="_blank" class="text-pink-500 hover:scale-110 transition-transform">
+              <i class="fab fa-instagram mr-2"></i>@santiacostaoficial
             </a>
-            <a href="https://youtube.com/@santiacostamusik" target="_blank" class="text-red-500 hover:scale-110 transition-transform">
-              <i class="fab fa-youtube mr-2"></i>@santiacostamusik
+            <a href="https://youtube.com/@santiacostaoficial" target="_blank" class="text-red-500 hover:scale-110 transition-transform">
+              <i class="fab fa-youtube mr-2"></i>@santiacostaoficial
             </a>
             <a href="https://wa.me/573012926689" target="_blank" class="text-green-500 hover:scale-110 transition-transform">
               <i class="fab fa-whatsapp mr-2"></i>+57 3012926689
