--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Violín, piano, guitarra, canto, sonido profesional, entre otros, para armonizar sus eventos">
   <meta name="keywords" content="Violín, violin, piano, canto, cantante, músico, músico, eventos, en vivo, música, música, bodas, composición, producción musical">
-  <title>Santi Acosta</title>
+  <title>Santi Acosta - Violín, piano, guitarra y canto para armonizar sus eventos</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ8P3L32D7"></script>
   <script>
