--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://santiacosta.com" />
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
