--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Violín, piano, guitarra, canto, sonido profesional, entre otros, para armonizar sus eventos">
+  <meta name="description" content="Violinista, pianista, guitarrista, cantante, sonido profesional, entre otros, para armonizar sus eventos">
   <meta name="keywords" content="Violín, violin, piano, canto, cantante, músico, músico, eventos, en vivo, música, música, bodas, composición, producción musical">
-  <title>Santi Acosta - Violín, piano, guitarra y canto para armonizar sus eventos</title>
+  <title>Santi Acosta - Compositor, violinista, pianista, cantante</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ8P3L32D7"></script>
   <script>
@@ -84,7 +84,7 @@
       <!-- Contenido -->
       <div class="relative z-10">
        <img src="santi-acosta-logo.svg" alt="Logo Santi Acosta" class="mx-auto mb-6 shadow-xl h-64">
-        <p class="text-lg text-gray-300">Compositor | Violinista | Canto | Eventos</p>
+        <p class="text-lg text-gray-300">Compositor | Violinista | Cantante | Eventos</p>
       </div>
     </section>
 
