--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Violinista, pianista, guitarrista, cantante, sonido profesional, entre otros, para armonizar sus eventos">
-  <meta name="keywords" content="Violín, violin, piano, canto, cantante, músico, músico, eventos, en vivo, música, música, bodas, composición, producción musical">
+  <meta name="keywords" content="Violín, violinista, piano, pianista, guitarra, guitarrista, canto, cantante, músico, músico, eventos, en vivo, música, música, bodas, composición, compositor, producción musical">
   <title>Santi Acosta - Compositor, violinista, pianista, cantante</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ8P3L32D7"></script>
