Add "Próximamente" to the videos section

--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
     </section>
 
     <!-- Videos -->
-    <section id="videos" class="py-20 px-6 bg-black text-center animate-on-scroll">
+    <section id="videos" class="py-20 px-6 bg-black text-white animate-on-scroll">
       <h2 class="text-3xl font-bold text-[#0760c3] mb-12">Videos</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto">
-        <iframe class="w-full aspect-video rounded-xl shadow-lg" src="https://www.youtube.com/embed/VIDEO_ID1" allowfullscreen></iframe>
-        <iframe class="w-full aspect-video rounded-xl shadow-lg" src="https://www.youtube.com/embed/VIDEO_ID2" allowfullscreen></iframe>
+      <div class="text-center text-gray-400 text-xl">
+        Próximamente
       </div>
     </section>
 
