--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section>
 
     <!-- Videos -->
-    <section id="videos" class="py-20 px-6 bg-black text-white animate-on-scroll">
+    <section id="videos" class="py-20 px-6 bg-black text-center animate-on-scroll">
       <h2 class="text-3xl font-bold text-[#0760c3] mb-12">Videos</h2>
       <div class="text-center text-gray-400 text-xl">
         Próximamente
